--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </script>
 </head>
 <body>
+    <input type="hidden" value="">
     <nav class="navbar">
         <div class="name-container" id="name-cont">
             <p class="my-name">Aryan R Chugh</p>
